# dworld_rust

./: .gitignore  Cargo.toml  README.md  savegame.json
.github/workflows/: rust.yml  rust_build.yml  ubuntu_build.yml
config/: display.ron
python/: Item_name_gen_testing.ipynb  markov.py  names.py  player_gen.ipynb
resources/: cp437_20x20_transparent.aseprite  dworld_main_menu.xp  terminal8x8.ron
src/: components.rs  console.rs  console_tiles.rs  console_tiles_system.rs  damage_system.rs  game_resources.rs  gui.rs  hunger_system.rs  inventory_system.rs  keyboard_test_system.rs  main.rs  map.rs  map_indexing_system.rs  melee_combat_system.rs  monster_ai_system.rs  particle_system.rs  player.rs  random_table.rs  rect.rs  rex_assets.rs  saveload_system.rs  spawner.rs  startup_state.rs  trigger_system.rs  utilities.rs  visibility_system.rs
src/components/: mod.rs  position.rs  renderable.rs
src/console_util/: advanced_drawing.rs  console.rs  mod.rs
src/map_builders/: bsp_dungeon.rs  bsp_interior.rs  cellular_automata.rs  common.rs  dla.rs  mod.rs
src/rendering/: render.rs
src/states/: main_menu_state.rs  mod.rs  startup_state.rs
src/systems/: render_system.rs
