[package]
name = "dworld_rust"
version = "0.1.0"
authors = ["TimothyQuark"]
edition = "2018"

[features]
#metal = ["amethyst/metal"]
#vulkan = ["amethyst/vulkan"]


[dependencies]
#amethyst = { version = "0.13.2", features = ["vulkan", "tiles" ], optional = false }
# Use this until the better sprite sheet rons are added to  stable
amethyst = { git = "https://github.com/amethyst/amethyst", features = [ "vulkan", "tiles" ], rev = "master" }


# Debug version : cargo build
# Release version : cargo build --release
