[package]
name = "dworld_rust"
version = "0.1.0"
authors = ["TimothyQuark"]
edition = "2018"

[dependencies.amethyst]
version = "0.15"
features = ["vulkan", "tiles"] # Or Metal for MacOS

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

# [profile.dev]
# opt-level = 0
# debug = true



