[package]
name = "dworld_rust"
version = "0.1.0"
authors = ["TimothyQuark"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.1"}
specs = { version = "0.16.1", features = ["serde"] }
specs-derive = "0.4.1"
serde = {version = "^1.0.114", features = ["derive"] }
serde_json = "^1.0.56"